crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_combined_with_path_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `when` cannot be used with `path`
   ╭─[pixi.toml:1:1]
 1 │ ╭─▶ path = "../foo"
 2 │ ╰─▶ when = "__unix"
   ╰────
