crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_expanded_invalid_version_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × it seems you're trying to add a path dependency, please specify as a table with a `path` key: '{ path = "//" }'
   ╭─[pixi.toml:2:41]
 1 │ version = "*"
 2 │ when = { package = "python", version = "//" }
   ·                                         ──
   ╰────
