crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_expanded_with_channel_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `channel` is not yet supported inside `when` tables
   ╭─[pixi.toml:2:8]
 1 │ version = "*"
 2 │ when = { package = "python", channel = "conda-forge" }
   ·        ───────────────────────────────────────────────
   ╰────
