crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_expanded_with_md5_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × source-location fields (`url`, `git`, `path`, `md5`, `sha256`, ...) are not allowed inside `when` tables
   ╭─[pixi.toml:2:8]
 1 │ version = "*"
 2 │ when = { package = "python", md5 = "d41d8cd98f00b204e9800998ecf8427e" }
   ·        ────────────────────────────────────────────────────────────────
   ╰────
