crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_nested_invalid_leaf_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × `when` strings do not support bracket matchspec syntax; use the expanded `{ package = ..., version = ..., build = ... }` form
   ╭─[pixi.toml:2:28]
 1 │ version = "*"
 2 │ when = { all = ["__unix", "python[version='>=3.10']"] }
   ·                            ────────────────────────
   ╰────
