crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_string_no_package_name_json.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_json_error(input)
---
invalid `when` matchspec: missing package name
