crates/pixi_spec/src/snapshots/pixi_spec__toml__test__when_reject_string_no_package_name_toml.snap
---
source: crates/pixi_spec/src/toml.rs
expression: parse_toml_error(input)
---
  × invalid `when` matchspec: missing package name
   ╭─[pixi.toml:2:9]
 1 │ version = "*"
 2 │ when = ">=3.10"
   ·         ──────
   ╰────
